--- a/charts/kdl-server/values.yaml
+++ b/charts/kdl-server/values.yaml
@@ -13,6 +13,16 @@ global:
   #   - name: myRegistryKeySecretName
   imagePullSecrets: []
 
+  # -- The DNS domain name that will serve the application
+  domain: kdl.local
+
+  # -- KDL Server instance name
+  serverName: "local-server"
+
+  # -- Enable HTTPs
+  # Use to enable or disable HTTPS on the endpoints
+  enableHttps: false
+
   # -- Environment variables to configure application
   env: {}
     # MY_VARIABLE: value
@@ -37,18 +47,11 @@ global:
     # - configMapRef:
     #     name: <name-configmap>
 
-  # TODO: legacy values, remove in future versions
-  # -- KDL Server instance name
-  serverName: "local-server"
+# -- String to partially override kdl-server.fullname template (will maintain the release name)
+nameOverride: ""
 
-  # -- The DNS domain name that will serve the application
-  domain: kdl.local
-
-  # (DEPRECATION) Clean _helpers.tpl
-  ingress:
-    tls:
-      enabled: false
-      secretName: ""
+# -- String to fully override kdl-server.fullname template
+fullnameOverride: ""
 
 # -- Image registry
 # The image configuration for the base service
@@ -58,13 +61,7 @@ image:
   # The pull policy for the image
   pullPolicy: IfNotPresent
   # The image tag
-  tag: "1.39.0"
-
-# -- String to partially override kdl-server.fullname template (will maintain the release name)
-nameOverride: ""
-
-# -- String to fully override kdl-server.fullname template
-fullnameOverride: ""
+  tag: "1.40.0"
 
 # -- Specifies the secrets to use for pulling images from private registries
 # Leave empty if no secrets are required
@@ -102,6 +99,7 @@ testConnection:
   tag: "latest"
 
 # -- Environment variables to configure application
+# </br> Ref: https://github.com/konstellation-io/kdl-server/tree/main/app/api
 env: {}
   # MINIO_ENDPOINT: test
   # KUBECONFIG_DOWNLOAD_ENABLED: "" # required
@@ -168,7 +166,7 @@ service:
   # -- Kubernetes Service type. Allowed values: NodePort, LoadBalancer or ClusterIP
   type: ClusterIP
   # -- Kubernetes Service port
-  port: 80
+  port: 8080
   # -- Kubernetes Service health check path
   # healthPath: ""
   # -- NodePort port (only when type is NodePort)
@@ -487,88 +485,6 @@ topologySpreadConstraints: []
 # - maxSkew: 1
 #   topologyKey: zone
 #   whenUnsatisfiable: DoNotSchedule
-
-# -- Cleaner job configuration
-cleaner:
-  # -- Whether to enable cleaner cronjob
-  enabled: false
-
-  # -- Image registry
-  # The image configuration for the base service
-  image:
-    # The repository of the image
-    repository: konstellation/kdl-cleaner
-    # The pull policy for the image
-    pullPolicy: IfNotPresent
-    # The image tag
-    tag: "0.16.0"
-
-  # -- Specifies the secrets to use for pulling images from private registries
-  # Leave empty if no secrets are required
-  # E.g.
-  # imagePullSecrets:
-  #   - name: myRegistryKeySecretName
-  imagePullSecrets: []
-
-  # -- Specifies how to treat concurrent executions of a Job.
-  # ref: https://kubernetes.io/docs/concepts/workloads/controllers/cron-jobs/#concurrency-policy
-  concurrencyPolicy: "Forbid"
-
-  # -- Specifies the maximum number of failed finished jobs to retain.
-  # ref: https://kubernetes.io/docs/concepts/workloads/controllers/cron-jobs/#jobs-history-limits
-  failedJobsHistoryLimit: 5
-
-  # -- Specifies the maximum number of successful finished jobs to retain.
-  # ref: https://kubernetes.io/docs/concepts/workloads/controllers/cron-jobs/#jobs-history-limits
-  successfulJobsHistoryLimit: 2
-
-  # -- Optional deadline in seconds for starting the job if it misses its scheduled time for any reason.
-  # ref: https://kubernetes.io/docs/concepts/workloads/controllers/cron-jobs/#cron-job-limitations
-  startingDeadlineSeconds: 60
-
-  # -- Specifies the number of retries before marking a job as failed.
-  # ref: https://kubernetes.io/docs/concepts/workloads/controllers/job/#pod-backoff-failure-policy
-  backoffLimit: 3
-
-  # -- Specifies the duration in seconds relative to the start time that the job may be active before the system tries to terminate it.
-  # ref: https://kubernetes.io/docs/concepts/workloads/controllers/job/#job-termination-and-cleanup
-  activeDeadlineSeconds: 86400
-
-  # -- Schedule for the cleaner cronjob
-  # example: every sunday at 1:00 AM
-  schedule: "0 1 * * 0"
-
-  # -- The name of the trash path
-  trashPath: /shared-storage/.trash
-
-  # -- The minimun age of files to be removed
-  threshold: 5 # minimun age of files to be removed
-
-  # -- Additional volumes on the output Deployment definition
-  # </br> Ref: https://kubernetes.io/docs/concepts/storage/volumes/
-  # </br> Ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-pod-configmap/
-  # </br> Ref: https://kubernetes.io/docs/tasks/inject-data-application/distribute-credentials-secure/#create-a-pod-that-has-access-to-the-secret-data-through-a-volume
-  volumes: []
-  # - name: foo
-  #   secret:
-  #     secretName: mysecret
-  #     optional: false
-
-  # -- Additional volumeMounts on the output Deployment definition
-  volumeMounts: []
-  # - name: foo
-  #   mountPath: "/etc/foo"
-  #   readOnly: true
-
-  # -- Resources limits and requested
-  # </br> Ref: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
-  resources: {}
-    # limits:
-    #   cpu: "100m"
-    #   memory: "128Mi"
-    # requests:
-    #   cpu: "50m"
-    #   memory: "64Mi"
 
 # -- Keycloak subchart deployment
 # </br> Ref: https://github.com/konstellation-io/helm-charts/blob/kdl-server-1.0.2/charts/kdl-server/values.yaml
@@ -1179,7 +1095,7 @@ projectOperator:
     # The pull policy for the image
     pullPolicy: IfNotPresent
     # The image tag
-    tag: "0.20.0"
+    tag: "0.21.0"
 
   # -- Specifies the secrets to use for pulling images from private registries
   # Leave empty if no secrets are required
@@ -1354,16 +1270,18 @@ projectOperator:
     spec:
       projectId: replaced-by-kdl-api
       domain: kdl.local
+
       mlflow:
         image:
           repository: konstellation/kdl-mlflow
           pullPolicy: IfNotPresent
-          tag: "0.14.18"
+          tag: "0.15.0"
+
       filebrowser:
         image:
-          repository: filebrowser/filebrowser
+          repository: konstellation/kdl-filebrowser
           pullPolicy: IfNotPresent
-          tag: "v2"
+          tag: "1.0.0"
 
 # -- Shared Volume configuration
 # Mount volume to share data between components
@@ -1431,7 +1349,7 @@ userToolsOperator:
     # The pull policy for the image
     pullPolicy: IfNotPresent
     # The image tag
-    tag: "0.31.0"
+    tag: "0.32.0"
 
   # -- Specifies the secrets to use for pulling images from private registries
   # Leave empty if no secrets are required
@@ -1595,7 +1513,7 @@ userToolsOperator:
   ### Following values are used to configure the User Tools Operator
   ### This config pass on ConfigMap to KDL API create UserTools CRD with the
   ### desired configuration.
-  # ref: https://github.com/konstellation-io/kdl-server/blob/main/user-tools-operator/helm-charts/kdl-user-tools/values.yaml
+  # </br> Ref: https://github.com/konstellation-io/kdl-server/blob/main/user-tools-operator/helm-charts/kdl-user-tools/values.yaml
 
   templateCustomResource: |
     apiVersion: kdl.konstellation.io/v1
@@ -1629,8 +1547,9 @@ userToolsOperator:
         image:
           repository: konstellation/kdl-repo-cloner
           pullPolicy: IfNotPresent
-          tag: "latest"
+          tag: "0.19.0"
 
+        # ref: https://github.com/konstellation-io/kdl-server/tree/main/repo-cloner
         env: {}
           # KDL_SERVER_MONGODB_URI: "mongodb://kdl:123456@mongodb-svc.mongodb:27017/kdl?authSource=kdl&authMechanism=SCRAM-SHA-256"
 
