--- a/charts/kdl-server/values.yaml
+++ b/charts/kdl-server/values.yaml
@@ -490,7 +490,7 @@ topologySpreadConstraints: []
 # </br> Ref: https://github.com/konstellation-io/helm-charts/blob/kdl-server-1.0.2/charts/kdl-server/values.yaml
 keycloak:
   # -- Enable or disable Keycloak subchart
-  enabled: true
+  enabled: false
 
   # Force keycloak name
   fullnameOverride: keycloak
@@ -879,10 +879,9 @@ knowledgeGalaxy:
 
 # -- MinIO subchart deployment
 # </br> Ref: https://github.com/minio/minio/blob/RELEASE.2021-10-13T00-23-17Z/helm/minio/values.yaml
-# TODO: pending to remove legacy minio
 minio:
   # -- Enable or disable MinIO subchart
-  enabled: true
+  enabled: false
 
   # mode MinIO server mode (`standalone` or `distributed`)
   # </br> Ref: https://docs.minio.io/docs/distributed-minio-quickstart-guide
@@ -1058,7 +1057,7 @@ oauth2proxy:
 # </br> Ref: https://github.com/bitnami/charts/blob/main/bitnami/postgresql/values.yaml
 postgresql:
     # -- Enable or disable PostgreSQL subchart
-  enabled: true
+  enabled: false
 
   # Number of PostgreSQL replicas to deploy
   replicaCount: 1
